# experimental-hs-xml-parser

./: .gitignore  README.md  stack.yaml  xml-parser.cabal
src/: Xml.hs
