name:                xml-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/saksmt/experimental-hs-xml-parser
license:             BSD3
license-file:        LICENSE
author:              Kirill Saksin
maintainer:          smt@smt.run
copyright:           2017 Kirill Saksin
category:            Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Xml
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , parsec-numbers
  default-language:    Haskell2010

test-suite parsec-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsec-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/saksmt/experimental-hs-xml-parser

